[package]
name = "grpc_jh"
version = "0.1.0"
edition = "2024"

[dependencies]
# sol-trade-sdk = { path = "./sol-trade-sdk", version = "0.1.0" }

base64 = "0.22.1"
borsh = "1.5.7"
chrono = "0.4.41"
dotenv = "0.15.0"
futures-util = "0.3.31"
log = "0.4.27"
pretty_env_logger = "0.5.0"
prost-types = "0.14.1"
solana-sdk = "2.2.1"
spl-associated-token-account = "7.0.0"
tokio = {version = "1.46.0", features = ["full"]}
yellowstone-grpc-client = "6.1.0"
yellowstone-grpc-proto = "6.1.0"
